--- a/src/backend/PortalEscolar.Application/PortalEscolar.Application.csproj
+++ b/src/backend/PortalEscolar.Application/PortalEscolar.Application.csproj
@@ -3,7 +3,21 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\PortalEscolar.Communication\PortalEscolar.Communication.csproj" />
+    <ProjectReference Include="..\..\Shared\PortalEscolar.Exceptions\PortalEscolar.Exceptions.csproj" />
+    <ProjectReference Include="..\PortalEscolar.Domain\PortalEscolar.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
