Feito teste para endpoint registrar Professora

--- a/src/backend/PortalEscolar.Domain/PortalEscolar.Domain.csproj
+++ b/src/backend/PortalEscolar.Domain/PortalEscolar.Domain.csproj
@@ -6,4 +6,10 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Interfaces\Repositories\Diretoria\Matricula\**" />
+    <EmbeddedResource Remove="Interfaces\Repositories\Diretoria\Matricula\**" />
+    <None Remove="Interfaces\Repositories\Diretoria\Matricula\**" />
+  </ItemGroup>
+
 </Project>
