--- a/src/Shared/PortalEscolar.Communication/PortalEscolar.Communication.csproj
+++ b/src/Shared/PortalEscolar.Communication/PortalEscolar.Communication.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\backend\PortalEscolar.Domain\PortalEscolar.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
