Criado o endpoint enviar exercicio.

--- a/src/backend/PortalEscolar.Api/appsettings.Development.json
+++ b/src/backend/PortalEscolar.Api/appsettings.Development.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDbConfig": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "PortalEscolar",
+    "ExercicioCollectionName": "Exercicios"
+  },
   "Config": {
     "ConnectionString": "Server=localhost;Database=PortalEscolar;Trusted_Connection=true;MultipleActiveResultSets=true;",
     "ChaveAdicionalSenha": "OFNAzM@qz23pP1hJ0U%M%V@mT",
