Removendo autorização desnecessaria em um endpoint.

--- a/src/backend/PortalEscolar.Api/appsettings.Development.json
+++ b/src/backend/PortalEscolar.Api/appsettings.Development.json
@@ -5,10 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "MongoDbConfig": {
+  "ExercicioParaResolverMongoDbConfig": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "PortalEscolar",
     "ExercicioCollectionName": "Exercicios"
+  },
+  "ExercicioResolvidoMongoDbConfig": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "PortalEscolar",
+    "ExercicioResolvidoCollectionName": "ExerciciosResolvidos"
   },
   "Config": {
     "ConnectionString": "Server=localhost;Database=PortalEscolar;Trusted_Connection=true;MultipleActiveResultSets=true;",
